# dotenv-hs

./: .all-contributorsrc  .env  .gitignore  .releaserc  .travis.yml  CHANGELOG.md  Dockerfile.copy-bin  LICENSE  README.md  build.sh  build.static.sh  dotenv.cabal  stack.yaml
.github/workflows/: README.md  build-and-test.yml  build.yml  draft.yml  publish.yml  release-gh.yml  release.yml
.travis/: ghcup.sh  travis_build.sh
app/: Main.hs
dotenv-test-180/module/: .env  CHANGELOG.md  LICENSE  module.cabal
dotenv-test-180/module/app/: Main.hs
dotenv-test-180/module/submodule/: .env  CHANGELOG.md  cabal.project.freeze  submodule.cabal
examples/api-dotenv-request/: .env.example  CHANGELOG.md  LICENSE  README.md  api-dotenv-request.cabal  package.yaml  stack.yaml
examples/api-dotenv-request/app/: Main.hs
examples/dotenv-secret-jwtcypher/: .env.example  CHANGELOG.md  README.md  dotenv-secret-jwtcypher.cabal  package.yaml  stack.yaml
examples/dotenv-secret-jwtcypher/app/: Main.hs
spec/: Spec.hs
spec/Configuration/: DotenvSpec.hs
spec/Configuration/Dotenv/: FileSpec.hs  FromEnvSpec.hs  ParseSpec.hs  SchemaSpec.hs  SchemeSpec.hs  TextSpec.hs
spec/Configuration/Dotenv/Schema/: ParseSpec.hs
spec/Configuration/Dotenv/Scheme/: HelpersSpec.hs  ParseSpec.hs
spec/fixtures/: .bad.dotenv.example  .dotenv  .dotenv.dup  .dotenv.example  .dotenv.safe  .schema.yml  .scheme.yml
src/Configuration/: Dotenv.hs
src/Configuration/Dotenv/: Environment.hs  File.hs  FromEnv.hs  Internal.hs  Parse.hs  ParsedVariable.hs  Schema.hs  Scheme.hs  Text.hs  Types.hs
src/Configuration/Dotenv/Schema/: Helpers.hs  Parser.hs  Types.hs
src/Configuration/Dotenv/Scheme/: Helpers.hs  Parser.hs  Types.hs
src/Environment/: Portable.hs
src/System/Environment/: Dotenv.hs
~/.local/share/nvim/shada/: main.shada
